--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_swiper_view: ^1.1.8
   flutter:
     sdk: flutter
+  provider: ^6.0.1
+  path_provider: ^2.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -78,6 +80,7 @@ flutter:
     - assets\images\tictocLogo.png
     - assets\images\webLogo.png
     - assets\data\info_page.json
+    - assets\data\deck1.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
