--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.1
   path_provider: ^2.0.8
+  flame: ^1.10.0
+  flame_audio: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -81,6 +83,8 @@ flutter:
     - assets\images\webLogo.png
     - assets\data\info_page.json
     - assets\data\deck1.json
+    - assets/images/
+    - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
